we weren't following the rules all the way. fixed some. also casting better a lot. also couple new tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,10 +78,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        compiler: [clang, gcc]
-        exclude:
-          - os: macos-latest
-            compiler: gcc
+        compiler: [clang]
 
     runs-on: ${{ matrix.os }}
 
