--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,9 @@ name: CI/CD
 
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [ master, main, develop, coverage ]
   pull_request:
     branches: [ master, main ]
-
-env:
-  CC: clang
 
 jobs:
   test:
@@ -19,9 +16,11 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y clang cppcheck valgrind llvm
+      uses: ./.github/actions/install-dependencies
+      with:
+        os: ubuntu
+        enable-coverage: 'true'
+        enable-sanitizers: 'true'
 
     - name: Build and test (optimized)
       run: |
@@ -36,9 +35,9 @@ jobs:
       run: |
         make test-asan
 
-    - name: Run static analysis (cppcheck)
+    - name: Run static analysis
       run: |
-        make check-cppcheck
+        make check
 
     - name: Generate coverage report
       run: |
@@ -60,9 +59,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y clang valgrind llvm
+      uses: ./.github/actions/install-dependencies
+      with:
+        os: ubuntu
+        extra-packages: 'valgrind'
 
     - name: Build for memory testing
       run: |
@@ -74,11 +74,15 @@ jobs:
         valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --track-origins=yes --error-exitcode=1 ./bin/bin_tests_debug
 
   cross-platform:
-    name: Cross-platform Build
+    name: Cross-platform Build (${{ matrix.os }})
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        compiler: [clang]
+        include:
+          - os: ubuntu-latest
+            os-name: ubuntu
+          - os: macos-latest  
+            os-name: macos
 
     runs-on: ${{ matrix.os }}
 
@@ -86,23 +90,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ${{ matrix.compiler }}
-
-    - name: Install dependencies (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        brew install llvm cppcheck
+    - name: Install dependencies
+      uses: ./.github/actions/install-dependencies
+      with:
+        os: ${{ matrix.os-name }}
 
     - name: Build and test
-      env:
-        CC: ${{ matrix.compiler }}
       run: |
         make clean
         make test
+
+    - name: Run static analysis
+      run: |
+        make check
 
   lint:
     name: Code Quality
@@ -112,13 +112,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install clang-tidy
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y clang-tidy llvm
+    - name: Install dependencies
+      uses: ./.github/actions/install-dependencies
+      with:
+        os: ubuntu
 
     - name: Run clang-tidy
       run: |
-        export PATH="/usr/bin:$PATH"
-        clang-tidy src/*.c -- -std=c2x -Isrc
+        make check-tidy
+
+    - name: Check for constraint violations
+      run: |
+        echo "Checking for forbidden operators in source code..."
+        if grep -n -E '(\&\&|\|\||!)' src/*.c | grep -v '//' | grep -v -E '(&&|\\|\\||!)' src/*.c; then
+          echo "✅ Only allowed logical operators found"
+        else  
+          echo "❌ Potentially forbidden operators detected"
+        fi
+        
+        # Check for bitwise operators (should be forbidden)
+        if grep -n -E '(\&[^&]|\|[^|]|\^|<<|>>|~)' src/*.c | grep -v '//' | head -5; then
+          echo "⚠️  Bitwise operators found - verify they comply with constraints"
+        else
+          echo "✅ No bitwise operators found"
+        fi
 
