--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,7 @@ jobs:
       uses: ./.github/actions/install-dependencies
       with:
         os: ubuntu
-        enable-coverage: 'true'
-        enable-sanitizers: 'true'
+        extra-packages: 'lcov gcovr libc6-dbg'
 
     - name: Build and test (optimized)
       run: |
