proper sanitize packages

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,8 +23,7 @@ jobs:
       uses: ./.github/actions/install-dependencies
       with:
         os: ubuntu
-        enable-sanitizers: 'true'
-        extra-packages: 'cppcheck clang-tools'
+        extra-packages: 'cppcheck clang-tools lcov gcovr libc6-dbg'
 
     - name: Build with all warnings
       run: |
@@ -34,13 +33,13 @@ jobs:
     - name: Run comprehensive static analysis
       run: |
         echo "=== Static Analysis Results ==="
-        
+
         # Run cppcheck with security checks
         echo "## CPPCheck Security Analysis"
         cppcheck --enable=all --std=c2x --inline-suppr --suppress=missingIncludeSystem \
           --check-level=exhaustive --inconclusive --platform=unix64 \
           --error-exitcode=1 src/ || echo "CPPCheck found issues (non-fatal)"
-        
+
         echo "## Clang Static Analyzer"
         clang --analyze -Xanalyzer -analyzer-output=text \
           -Xanalyzer -analyzer-checker=security,alpha.security,alpha.core \
@@ -49,10 +48,10 @@ jobs:
     - name: Test with sanitizers
       run: |
         echo "=== Sanitizer Tests ==="
-        
+
         echo "## AddressSanitizer"
         make test-asan
-        
+
         # Build and test with UBSan if available
         echo "## UndefinedBehaviorSanitizer"
         if make CC=clang CFLAGS_DEBUG="-std=c2x -fsanitize=undefined -fno-omit-frame-pointer -O0 -g3" test-debug 2>/dev/null; then
@@ -64,7 +63,7 @@ jobs:
     - name: Check for common security issues
       run: |
         echo "=== Security Pattern Analysis ==="
-        
+
         # Check for potentially unsafe functions
         echo "## Checking for unsafe functions..."
         UNSAFE_FUNCS="strcpy|strcat|sprintf|gets|scanf"
@@ -73,15 +72,15 @@ jobs:
         else
           echo "✅ No obviously unsafe functions found"
         fi
-        
+
         # Check for hardcoded values that might be secrets
         echo "## Checking for potential hardcoded secrets..."
         if grep -rn -E "(password|secret|key|token)" src/ test/ --ignore-case; then
-          echo "⚠️  Found potential secret-like strings - review carefully"  
+          echo "⚠️  Found potential secret-like strings - review carefully"
         else
           echo "✅ No obvious hardcoded secrets found"
         fi
-        
+
         # Check for integer overflow patterns
         echo "## Checking for potential integer overflow..."
         if grep -rn -E "(\*.*\+|\+.*\*).*=" src/ | grep -v "//"; then
@@ -93,7 +92,7 @@ jobs:
     - name: Memory safety analysis
       run: |
         echo "=== Memory Safety Analysis ==="
-        
+
         # Check for potential buffer overflow patterns
         echo "## Buffer safety analysis..."
         if grep -rn -E "(memcpy|strcpy|strncpy|memset)" src/; then
@@ -101,7 +100,7 @@ jobs:
         else
           echo "✅ No obvious memory manipulation functions found"
         fi
-        
+
         # Check array access patterns
         echo "## Array access analysis..."
         if grep -rn -E "\[[^]]*\+[^]]*\]" src/ | head -5; then
@@ -110,12 +109,12 @@ jobs:
           echo "✅ Array access appears safe"
         fi
 
-    - name: Constraint compliance check  
+    - name: Constraint compliance check
       run: |
         echo "=== Constraint Compliance Check ==="
-        
+
         echo "## Checking for forbidden operators..."
-        
+
         # Check for bitwise operators (should be forbidden by project rules)
         echo "### Bitwise operators:"
         if grep -rn -E "(\&[^&]|\|[^|]|\^|<<|>>|~)" src/ | grep -v "//" | head -10; then
@@ -124,13 +123,13 @@ jobs:
         else
           echo "✅ No bitwise operators found"
         fi
-        
+
         # Check for arithmetic operators beyond basic ones
-        echo "### Arithmetic operators:"  
+        echo "### Arithmetic operators:"
         if grep -rn -E "(\*|\/|\%)" src/ | grep -v "//" | head -5; then
           echo "ℹ️  Found arithmetic operators - verify constraint compliance"
         fi
-        
+
         # Summary
         echo "## Constraint Compliance Summary"
         echo "Please review the above findings against project constraints in README.md"
@@ -141,7 +140,7 @@ jobs:
         echo "Generated: $(date)" >> security-report.md
         echo "" >> security-report.md
         echo "## Status: ✅ No critical security issues found" >> security-report.md
-        echo "" >> security-report.md  
+        echo "" >> security-report.md
         echo "## Analysis Performed:" >> security-report.md
         echo "- Static analysis with cppcheck and clang analyzer" >> security-report.md
         echo "- AddressSanitizer testing" >> security-report.md
