--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -20,7 +20,7 @@ jobs:
       uses: ./.github/actions/install-dependencies
       with:
         os: ubuntu
-        extra-packages: 'time'
+        extra-packages: 'lcov gcovr libc6-dbg valgrind time'
 
     - name: Build optimized version
       run: |
