--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,7 +23,7 @@ jobs:
       uses: ./.github/actions/install-dependencies
       with:
         os: ubuntu
-        extra-packages: 'lcov gcovr libc6-dbg valgrind time cppcheck clang-tools'
+        extra-packages: 'clang-tools'
 
     - name: Build with all warnings
       run: |
