--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,16 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y clang
-        
+      uses: ./.github/actions/install-dependencies
+      with:
+        os: ubuntu
+
     - name: Build release artifacts
       run: |
         make clean
@@ -27,7 +27,7 @@ jobs:
         cp build/libbin.so artifacts/
         cp -r src/*.h artifacts/
         tar -czf artifacts/libbin-src.tar.gz src/ test/ Makefile README.markdown
-        
+
     - name: Create Release
       uses: actions/create-release@v1
       env:
@@ -37,7 +37,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-        
+
     - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
       env:
@@ -46,4 +46,4 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifacts/libbin-src.tar.gz
         asset_name: libbin-src.tar.gz
-        asset_content_type: application/gzip 
+        asset_content_type: application/gzip
