--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,8 +133,12 @@ jobs:
         echo "Checking for bitwise operators (forbidden by educational constraints):"
 
         # Check for actual bitwise operators (the ones we want to avoid)
-        # Use sed to strip all comments before checking
-        BITWISE_VIOLATIONS=$(find src/ -name "*.c" -o -name "*.h" | xargs sed -e 's|//.*||g' -e 's|/\*.*\*/||g' | grep -n -E '(\&[^&]|\|[^|]|\^|<<|>>|~)' | grep -v '&&' | grep -v '||' || true)
+        # Use a more robust approach to strip comments
+        BITWISE_VIOLATIONS=$(find src/ -name "*.c" -o -name "*.h" | while read file; do
+          # Remove all types of C comments, then check for violations
+          # This handles both // and /* */ comments properly
+          perl -pe 's|//.*||g; s|/\*.*?\*/||gs' "$file" | grep -n -E '(\&[^&]|\|[^|]|\^|<<|>>|~)' | grep -v '&&' | grep -v '||' | sed "s|^|$file:|" || true
+        done)
         
         BITWISE_COUNT=$(echo "$BITWISE_VIOLATIONS" | grep -c . 2>/dev/null || true)
         if [ -z "$BITWISE_COUNT" ] || [ "$BITWISE_COUNT" = "" ]; then
