--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -118,7 +118,11 @@ jobs:
 
         # Check for bitwise operators (should be forbidden by project rules)
         echo "### Bitwise operators:"
-        BITWISE_VIOLATIONS=$(find src/ -name "*.c" -o -name "*.h" | xargs sed -e 's|//.*||g' -e 's|/\*.*\*/||g' | grep -n -E '(\&[^&]|\|[^|]|\^|<<|>>|~)' | grep -v '&&' | grep -v '||' || true)
+        BITWISE_VIOLATIONS=$(find src/ -name "*.c" -o -name "*.h" | while read file; do
+          # Remove all types of C comments, then check for violations
+          # This handles both // and /* */ comments properly
+          perl -pe 's|//.*||g; s|/\*.*?\*/||gs' "$file" | grep -n -E '(\&[^&]|\|[^|]|\^|<<|>>|~)' | grep -v '&&' | grep -v '||' | sed "s|^|$file:|" || true
+        done)
         
         BITWISE_COUNT=$(echo "$BITWISE_VIOLATIONS" | grep -c . 2>/dev/null || true)
         if [ -z "$BITWISE_COUNT" ] || [ "$BITWISE_COUNT" = "" ]; then
