--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,10 +53,24 @@ jobs:
         fail_ci_if_error: true
         verbose: true
 
+    - name: Debug - Check if junit.xml exists
+      run: |
+        if [ -f junit.xml ]; then
+          echo "✅ junit.xml exists"
+          ls -la junit.xml
+          echo "=== First 10 lines of junit.xml ==="
+          head -10 junit.xml
+        else
+          echo "❌ junit.xml not found"
+          echo "Files in current directory:"
+          ls -la
+        fi
+
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
+        files: ./junit.xml
         token: ${{ secrets.CODECOV_TOKEN }}
 
   memory-check:
@@ -118,6 +132,7 @@ jobs:
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
+        files: ./junit.xml
         token: ${{ secrets.CODECOV_TOKEN }}
 
   lint:
